# LIB-lzo

./: LZO.TXT  LZO.lsm  LZOAPI.TXT  Makefile  PLATFORM.TXT  README.md  acconfig.h  config.in  configure  configure.in  lzo_test.c  simple.c
arch/i386/: 00readme.txt  enter.sh  leave.sh  lzo1c_d.sh  lzo1c_s1.S  lzo1c_s2.S  lzo1f_d.sh  lzo1f_s1.S  lzo1f_s2.S  lzo1x_d.sh  lzo1x_s1.S  lzo1x_s2.S  lzo1y_s1.S  lzo1y_s2.S  lzo_asm.sh
config/: Makedefs.dos  Makedefs.in  Makedefs.os2  Makefile.in  aclocal.m4  config.lzo  dist.lst  files.lst  make_bcc.btm  make_msc.btm  make_wcc.btm  mkdist.pl  mkrsp.c  msc.rsp  purec.prj  wcc.rsp
doc/: b008.txt  b256.txt  bench.txt  s008.txt  s256.txt
extra/: lzo1c_c.c  lzo1c_d.c  lzo1f_c.c  lzo1f_d.c  lzo1x_c.c  lzo1x_d.c
include/: lzo1.h  lzo1a.h  lzo1b.h  lzo1c.h  lzo1f.h  lzo1x.h  lzo1y.h  lzo2a.h  lzoconf.h
src/: config1a.h  config1b.h  config1c.h  config1f.h  config1x.h  config1y.h  config2a.h  lzo1.c  lzo1_99.c  lzo1_d.h  lzo1a.c  lzo1a_99.c  lzo1a_cm.ch  lzo1a_cr.ch  lzo1b_9x.c  lzo1b_c.ch  lzo1b_cc.c  lzo1b_cc.h  lzo1b_cm.ch  lzo1b_cr.ch  lzo1b_d.ch  lzo1b_de.h  lzo1b_r.ch  lzo1b_sm.ch  lzo1b_tm.ch  lzo1b_xx.c  lzo1c_9x.c  lzo1c_cc.c  lzo1c_cc.h  lzo1c_xx.c  lzo1f_9x.c  lzo1f_d.ch  lzo1x_9x.c  lzo1x_d.ch  lzo1x_oo.ch  lzo2a_9x.c  lzo2a_d.ch  lzo_conf.h  lzo_dict.h  lzo_mchw.ch  (+3 more)
src/lzo1b/: compr.h  lzo1b_1.c  lzo1b_2.c  lzo1b_3.c  lzo1b_4.c  lzo1b_9.c
src/lzo1c/: compr.h  lzo1c_5.c  lzo1c_6.c  lzo1c_7.c  lzo1c_8.c  lzo1c_99.c
util/: bench.sh  check.sh  diff_v.btm  r_test.btm  shortf.pl  table.pl
